--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/jobs/mapaweb/job.log*
-/jobs/mapaweb/2018*
 heritrix.pid
-/jobs/mapaweb/scratch/*
+heritrix_out.log
+jobs/mapaweb
+!jobs/mapaweb/crawler-beans.cxml
